# GhostPass

./: Cargo.toml  README.md
src/: cli.rs  clipboard.rs  crypto.rs  error.rs  main.rs  trust.rs  vault.rs
